# SaveManager

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  .mailmap  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.valgrind  Info.plist.in  LICENSE.md  Makefile  Program.cs  README.md  SCRIPTING.md  SUPPORTED_GAMES.md  SaveManager.csproj  SaveManager.sln  SaveManagerGUI.sln  TODO.md  build-windows.sh  cmake.toml  conanfile.py  conanfile.txt  configure-vs.bat  create_vs22_project.bat  crossbuild-to-windows.sh  leak_check.sh  update-dependencies.sh  vcpkg.json
.forgejo/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions.md
.forgejo/workflows/: build-release-linux-x86-64.yml  build-release.yml  build-test.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-release.yml  build-test.yml  build.yml
cli/: README.md
cli/src/: main.cpp
daemon/: README.md  main.cpp  savemanager-daemon.service
daemon/src/: main.cpp  socket.hpp  watcher.cpp  watcher.hpp
data/: steamids.json  ubi_translations.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SCRIPTING.md  SUPPORTED_GAMES.md
gui/: README.md
gui/src/: main.cpp  pch.hpp  version.cpp.in  version.hpp
lib/: README.md
lib/include/: constants.hpp  pch.hpp  sm_error.hpp  types.hpp  version.cpp.in  version.hpp
scripts/: build-windows-ninja.bat  create_vs22_project.bat
src/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  Core.cs  Dashboard.xaml  Dashboard.xaml.cs  JsonContext.cs  LoginWindow.axaml  LoginWindow.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  SaveManager.csproj  SaveManagerGUI.csproj  app.manifest  constants.hpp  globals.hpp  main.cpp  pch.hpp  types.hpp
src/CommandSystem/: CommandBase.cs  CommandHandler.cs  CommandLoop.cs  CommandProcessor.cs
src/Commands/: Command.cs  CommandProcessor.cs
src/Core/: BackupManager.cs  ConfigManager.cs  Core.cs  Globals.cs  SyncManager.cs
src/Factories/: SaveManagerFactory.cs
src/Interfaces/: ICommand.cs  ISaveFileStorage.cs  ISaveManager.cs
src/Managers/: BaseManager.cs  ConfigManager.cs  RockstarManager.cs  UbiManager.cs
src/Models/: BackupLogEntry.cs  ConfigData.cs  SaveFileInfo.cs
src/Modules/: Rockstar.cs  Ubisoft.cs  Unreal.cs
src/Services/: ConfigManager.cs  GameArtwork.cs  SaveManager.cs
src/Terminal/: TerminalUI.cs
src/UI/: Dashboard.axaml  MainWindow.axaml  MainWindow.axaml.cs  Settings.axaml  Settings.axaml.cs  Sidebar.axaml
src/Utilities/: Constants.cs  Globals.cs  JsonContext.cs  Logger.cs  TerminalUI.cs  Utilities.cs
src/app/: app.cpp  app.hpp
src/cli/: main.cpp
src/command/: command.cpp  command.hpp
src/config/: config.cpp  config.hpp
src/core/: Auth.cs  Utils.cs  globals.hpp  savemanager.cpp  savemanager.hpp
toolchains/: toolchain-mingw-w64-base.cmake  toolchain-mingw-w64-vcpkg.cmake
wwwroot/: index.html  script.js  style.css
(+311 files in other folders)
